SodexoP/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Duracion_de_la_llamada__c</fullName>
        <label>Duracion de la llamada</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hora__c</fullName>
        <label>Hora</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_Telefono__c</fullName>
        <label>Numero de Telefono</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipificaciones__c</fullName>
        <label>Tipificaciones</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Llamada__c</fullName>
        <label>Tipo de Llamada</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>